# tkauto

./: README.md  demo.py  pyproject.toml
src/nicetker/: __init__.py  client.py
src/nicetker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
